[tool.poetry]
name = "learningmngsys"
version = "0.1.0"
description = ""
authors = ["Vítor Carrara P. Marques <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.99.1"
pydantic = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
